style/lifeOfMeter.css
html, body { 
	padding: 0; 
	margin: 0;
	background-color: #333;
}

body {
	width: 1000px;
	height: 773px;
	font-size: 16px;
	position: relative;
	margin: 0 auto;
}

#container {
	background-color: #333;
	width: 1000px;
	height: 773px;
	position: relative;
	margin: 0 auto;
}


/** Make sure images are always on top */
img {
	position: absolute;
	z-index: 0;
}

#click-for-details {
	position: absolute;
	color: black;
	background-color: #FAAE1A;
	border: 2px solid #111;
	font-size: 12px;
	font-weight: bolder;
	padding: 2px;
	pointer-events: none;
	display: none;
}

/** Description Box */
#description-box {
	display: none;
	position: absolute;
	top: 0;
	border-radius: 10px;
	padding: 10px;
	margin: 10px;
	background-color: #EFEFEF;
	width: 590px;
	max-height: 200px;
	overflow-y: auto;
}

#description-content {
	font-size: 14px;
	line-height: normal;
}

#description-header {
	margin-top: 0;
}

.parent-phase {
	display: block;
	font-size: 22px;
}

#backButton
{
	position: absolute;
	top: 6px;
	right: 20px;
/*	padding-left: 4px;
	padding-right: 4px;
*/}

#backButton:visited {
	color: #00E;	
}

/* headers */
#description-phaseName 
{
	margin-top: 16px;
	margin-bottom: 4px;	
}

#description-departmentName
{
	margin-top: 4px;
	margin-bottom: 4px;	
	padding-left: 1em;
	line-height: 20px;
	font-size: 22px;
} 

#description-jobName 
{
	font-size: 18px;
	margin-top: 10px;
	margin-bottom: 10px;	
	padding-left: 2em;
}

